- Updated with java 17 features